# postgrust-sql

./: .dockerignore  .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  DATA_TYPES.md  Dockerfile  FEATURES.md  FUTURE_UPDATES.md  INSTALL.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  LICENSE  Makefile  NEW_TYPES_COMPLETE.md  NEW_TYPES_PROGRESS.md  PKGBUILD  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  SESSION_SUMMARY.md  STORAGE_ANALYSIS.md  TESTING.md  V1.5.0_STATUS.md  VACUUM_DESIGN.md  benchmark_checkpoint.sh  benchmark_simple.sh  benchmark_write_amp.sh  benchmark_write_amp_v2.sh  docker-compose.yml  postgrustsql.install  test_features.sh  test_group_by.sh  test_new_types.sh  test_page_integration.sh  test_psql.sh  test_psql_syntax.sh  test_serial_quick.sh  test_wal_automatic.sh
config/: postgrustsql.toml
debian/: changelog  control  postinst  postrm  prerm  rules
examples/: cli.rs  client.rs  compare_formats.rs  demo_transactions.rs  pg_test.rs  simple_test.rs
scripts/: debug_persistence.sh  run_test.sh
src/: executor.rs  lib.rs  main.rs  parser_old.rs  pg_protocol.rs  server.rs  storage.rs  transaction.rs  types.rs  wal.rs
src/core/: column.rs  constraints.rs  data_type.rs  database.rs  database_metadata.rs  error.rs  mod.rs  privilege.rs  role.rs  row.rs  server_instance.rs  table.rs  table_metadata.rs  user.rs  value.rs
src/executor/: conditions.rs  ddl.rs  dispatcher.rs  dispatcher.rs.bak2  dml.rs  explain.rs  index.rs  legacy.rs  mod.rs  queries.rs  storage_adapter.rs  subquery.rs  system_catalogs.rs  system_functions.rs  vacuum.rs  window.rs
src/index/: btree.rs  hash.rs  mod.rs
src/network/: copy_binary.rs  mod.rs  pg_protocol.rs  prepared_statements.rs  server.rs
src/parser/: common.rs  ddl.rs  dml.rs  meta.rs  mod.rs  queries.rs  statement.rs  transaction.rs
src/storage/: buffer_pool.rs  database_storage.rs  disk.rs  mod.rs  page.rs  page_manager.rs  paged_table.rs  wal.rs
src/transaction/: global_manager.rs  manager.rs  mod.rs  snapshot.rs
systemd/: postgrustsql.service
tests/: quick_index_test.rs
tests/integration/: test_aggregates.sh  test_composite_index.sh  test_copy_binary.sh  test_dump_restore.sh  test_dump_simple.sh  test_explain.sh  test_extended_operators.sh  test_features.sh  test_fk_join.sh  test_hash_index.sh  test_index.sh  test_index_usage.sh  test_multi_join.sh  test_mvcc_isolation.sh  test_mvcc_vacuum.sh  test_serial.sh  (+8 more)
(+3 files in other folders)
