[package]
name = "postgrustql"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
nom = "7.1"
thiserror = "2.0"
bytes = "1.9"
comfy-table = "7.1"
rustyline = "14.0"
dirs = "5.0"
sha2 = "0.10"
# New types support
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
rust_decimal = { version = "1.33", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
