[package]
name = "postgrustql"
version = "2.2.2"
edition = "2024"
license = "MIT"
authors = ["fr3ddy-fryd3 <fr3ddyfryd3@gmail.com>"]
description = "PostgreSQL-compatible database server written in Rust with MVCC, transactions, and full SQL support"
repository = "https://github.com/fr3ddy-fryd3/postgrust-sql"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
nom = "7.1"
thiserror = "2.0"
bytes = "1.9"
comfy-table = "7.1"
rustyline = "14.0"
dirs = "5.0"
sha2 = "0.10"
# New types support
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
rust_decimal = { version = "1.33", features = ["serde"] }
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
page_storage = []

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[lints.clippy]
# Самые строгие группы линтов
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Дополнительные строгие проверки
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
suspicious = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }

# Binary targets
[[bin]]
name = "postgrustsql"
path = "src/main.rs"

[[bin]]
name = "pgr_cli"
path = "src/bin/pgr_cli.rs"

[[bin]]
name = "pgr_dump"
path = "src/bin/pgr_dump.rs"

[[bin]]
name = "pgr_restore"
path = "src/bin/pgr_restore.rs"
